Fix misalignment in spreadsheet pdf export dialog. Closes telerik/kendo-ui-core#2315

--- a/styles/web/kendo.common-bootstrap.less
+++ b/styles/web/kendo.common-bootstrap.less
@@ -151,11 +151,11 @@ input.k-textbox {
 
 .k-spreadsheet-window {
     .k-page-orientation {
-        top: 24%;
+        top: 25%;
     }
 
     .k-page-landscape {
-        top: 27%;
+        top: 28%;
     }
 }
 
