--- a/styles/web/kendo.common-fiori.less
+++ b/styles/web/kendo.common-fiori.less
@@ -1173,7 +1173,7 @@ span.k-tooltip
 
 .k-spreadsheet-window {
     .k-page-orientation {
-        top: 26%;
+        top: 24%;
     }
 
     .k-page-landscape {
