--- a/styles/web/kendo.common-nova.less
+++ b/styles/web/kendo.common-nova.less
@@ -1797,7 +1797,7 @@ li.k-item.k-last.k-state-selected {
 
 .k-spreadsheet-window {
     .k-page-orientation {
-        top: 26%;
+        top: 27%;
     }
 
     .k-page-landscape {
